update nacos-client version to 2.2.1-RC

--- a/spring-cloud-alibaba-dependencies/pom.xml
+++ b/spring-cloud-alibaba-dependencies/pom.xml
@@ -21,7 +21,7 @@
         <revision>2022.0.0.0-RC1</revision>
         <sentinel.version>1.8.6</sentinel.version>
         <seata.version>1.5.2</seata.version>
-        <nacos.client.version>2.0.4</nacos.client.version>
+        <nacos.client.version>2.2.1-RC</nacos.client.version>
         <spring.context.support.version>1.0.11</spring.context.support.version>
 
         <!-- Maven Plugin Versions -->
