--- a/spring-cloud-alibaba-starters/spring-cloud-alibaba-governance/resource-transform/spring-cloud-starter-alibaba-opensergo/pom.xml
+++ b/spring-cloud-alibaba-starters/spring-cloud-alibaba-governance/resource-transform/spring-cloud-starter-alibaba-opensergo/pom.xml
@@ -12,6 +12,11 @@
     <artifactId>spring-cloud-starter-alibaba-opensergo</artifactId>
     <name>Spring Cloud Alibaba OpenSergo</name>
 
+    <properties>
+        <java.version>1.8</java.version>
+        <envoy-api.version>1.0.36</envoy-api.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -32,6 +37,11 @@
             <artifactId>opensergo-java-sdk</artifactId>
         </dependency>
         <dependency>
+            <groupId>io.envoyproxy.controlplane</groupId>
+            <artifactId>api</artifactId>
+            <version>${envoy-api.version}</version>
+        </dependency>
+        <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-governance-labelrouting</artifactId>
             <scope>test</scope>
@@ -44,12 +54,7 @@
             <scope>test</scope>
             <optional>true</optional>
         </dependency>
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-            <version>2.0.16</version>
-            <scope>test</scope>
-        </dependency>
+
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
@@ -57,8 +62,5 @@
         </dependency>
 
     </dependencies>
-    <properties>
-        <java.version>1.8</java.version>
-    </properties>
 
 </project>
